// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableList | CellContent should render "-" by default when no recognized cell type is passed 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    aria-label="This field is empty"
    class="c0"
  >
    -
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render date cell type 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    class="c0"
  >
    Friday, November 18, 2022
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render extension cell type when element type is asset 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    class="c0"
  >
    PDF
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render extension cell type with "-" when element type is folder 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    aria-label="This field is empty"
    class="c0"
  >
    -
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render image cell type when element type is asset and mime does not include image 1`] = `
.c0 {
  background: #eaf5ff;
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.43;
  font-weight: 600;
  color: #0c75af;
  text-transform: uppercase;
}

.c1 {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.c4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 span {
  line-height: 0;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <span
      class="c3"
    >
      pdf
    </span>
  </div>
  <span
    class="c4"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render image cell type when element type is asset and mime includes image 1`] = `
.c0 {
  position: relative;
  width: 32px;
  height: 32px;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c1 {
  border-radius: 50%;
  object-fit: cover;
  display: block;
  position: relative;
}

<div>
  <span>
    <div
      class="c0"
    >
      <img
        alt="alternative alt"
        class="c1"
        height="32px"
        src="michka-picture-url-thumbnail.jpeg"
        width="32px"
      />
    </div>
  </span>
  <span
    class="c2"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render image cell type when element type is folder 1`] = `
.c0 {
  background: #eaf5ff;
  border-radius: 50%;
  width: 32px;
  height: 32px;
}

.c3 {
  font-size: 1.4rem;
  line-height: 1.43;
  font-weight: 600;
  color: #0c75af;
  text-transform: uppercase;
}

.c1 {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.c4 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 span {
  line-height: 0;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <span
      class="c3"
    >
      <svg
        fill="#66b7f1"
        height="1.6rem"
        viewBox="0 0 32 32"
        width="1.6rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M27 9H16.414L13 5.586A1.98 1.98 0 0 0 11.586 5H5a2 2 0 0 0-2 2v18.078A1.926 1.926 0 0 0 4.924 27H27.11A1.89 1.89 0 0 0 29 25.111V11a2 2 0 0 0-2-2M5 7h6.586l2 2H5z"
        />
      </svg>
    </span>
  </div>
  <span
    class="c4"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render size cell type when element type is asset 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    class="c0"
  >
    21KB
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render size cell type with "-" when element type is folder 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    aria-label="This field is empty"
    class="c0"
  >
    -
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;

exports[`TableList | CellContent should render text cell type 1`] = `
.c0 {
  font-size: 1.4rem;
  line-height: 1.43;
  color: currentcolor;
}

.c1 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <span
    class="c0"
  >
    some text
  </span>
  <span
    class="c1"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </span>
</div>
`;
